--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -87,8 +87,10 @@
             </div>
 
             <div id="test" class="col col-md-{{diagramWidth}}">
-
-                <div id="svg-div"></div>
+                <h3>Context Diagram</h3>
+                <div id="context"></div>
+                <h3>Summary Diagram</h3>
+                <div id="powergraph"></div>
 
             </div>
 
