--- a/client/views/context/ctxDgm/ctxDgm.less
+++ b/client/views/context/ctxDgm/ctxDgm.less
@@ -1,4 +1,4 @@
-#svg-div {
+#test {
 
   .background {
     stroke: gray;
@@ -29,11 +29,5 @@
     font-size: 20px;
     text-anchor: middle;
     cursor: move;
-  }
-  .legend {
-    fill: black;
-    font-family: Verdana;
-    font-size: 15px;
-    text-anchor: left;
   }
 }
