--- a/client/views/context/ctxDgmView/ctxDgmView.html
+++ b/client/views/context/ctxDgmView/ctxDgmView.html
@@ -48,7 +48,10 @@
 
                 <hr>
 
-                <div id="svg-div"></div>
+                <h3>Context Diagram</h3>
+                <div id="context"></div>
+                <h3>Summary Diagram</h3>
+                <div id="powergraph"></div>
 
                 {{> ctxDgmInfo}}
 
