--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -77,8 +77,6 @@
                                 </div>
                             </div>
                         </form>
-                        <hr>
-                        <p>Having trouble?  <a href="#">Check out the cheat sheet.</a></p>
                     </div>
                 </div>
 
@@ -86,7 +84,7 @@
 
             </div>
 
-            <div id="test" class="col col-md-{{diagramWidth}}">
+            <div id="context-div" class="col col-md-{{diagramWidth}}">
                 <h3>Context Diagram</h3>
                 <div id="context"></div>
                 <h3>Summary Diagram</h3>
