--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -85,9 +85,13 @@
             </div>
 
             <div id="context-div" class="col col-md-{{diagramWidth}}">
-                <h3>Context Diagram</h3>
+                <h4 style="margin-top: -5px">Context Diagram
+                    <a id="context-help">
+                        <i class="fa fa-question-circle"></i>
+                    </a>
+                </h4>
                 <div id="context"></div>
-                <h3>Summary Diagram</h3>
+                <h4>Summary Diagram</h4>
                 <div id="powergraph"></div>
 
             </div>
