--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -91,7 +91,11 @@
                     </a>
                 </h4>
                 <div id="context"></div>
-                <h4>Summary Diagram</h4>
+                <h4>Summary Diagram
+                    <a id="powergraph-help">
+                        <i class="fa fa-question-circle"></i>
+                    </a>
+                </h4>
                 <div id="powergraph"></div>
 
             </div>
