--- a/client/views/context/ctxDgmView/ctxDgmView.html
+++ b/client/views/context/ctxDgmView/ctxDgmView.html
@@ -53,11 +53,19 @@
             </div>
 
             <div id="context-div" class="col col-md-6">
-                <h3>Context Diagram</h3>
+                <h4 style="margin-top: -5px">Context Diagram
+                    <a id="context-help">
+                        <i class="fa fa-question-circle"></i>
+                    </a>
+                </h4>
                 <div id="context"></div>
             </div>
             <div id="powergraph-div" class="col col-md-6">
-                <h3>Summary Diagram</h3>
+                <h4 style="margin-top: -5px">Summary Diagram
+                    <a id="powergraph-help">
+                        <i class="fa fa-question-circle"></i>
+                    </a>
+                </h4>
                 <div id="powergraph"></div>
             </div>
         </div>
