--- a/client/views/history/detail/historyPage.html
+++ b/client/views/history/detail/historyPage.html
@@ -16,8 +16,26 @@
                     </span>
 
                     <hr>
-
+                    {{#if isCtxDgm}}
+                    <div id="context-div" class="col col-md-6">
+                        <h4 style="margin-top: -5px">Context Diagram
+                            <a id="context-help">
+                                <i class="fa fa-question-circle"></i>
+                            </a>
+                        </h4>
+                        <div id="context"></div>
+                    </div>
+                    <div id="powergraph-div" class="col col-md-6">
+                        <h4 style="margin-top: -5px">Summary Diagram
+                            <a id="powergraph-help">
+                                <i class="fa fa-question-circle"></i>
+                            </a>
+                        </h4>
+                        <div id="powergraph"></div>
+                    </div>
+                    {{else}}
                     <div id="diagram"></div>
+                    {{/if}}
                 </div>
             </div>
 
