--- a/client/views/home/homeNewUser.html
+++ b/client/views/home/homeNewUser.html
@@ -4,7 +4,13 @@
             <div class="panel-body">
 
                 <p class="lead">You must be new here!</p>
-                <h3><a href="/diagram/add"><i class="fa fa-plus-circle fa-2x"></i> Create </a>yourself a diagram</h3>
+                <h3><i class="fa fa-plus-circle fa-2x"></i> Create yourself a diagram</h3>
+
+                <ul>
+                    <li><a id="seqCreate" href="#">Sequence Diagram</a></li>
+                    <li><a id="ctxCreate" href="#">Context Diagram</a></li>
+                </ul>
+
             </div>
         </div>
     </div>
