--- a/client/views/static/aboutPage.html
+++ b/client/views/static/aboutPage.html
@@ -22,11 +22,10 @@
 
                         <h3>Credit to</h3>
                         <ul>
-                            <li>http://bramp.github.io/js-sequence-diagrams</li>
-                            <li>http://meteor.com</li>
-                            <li>https://github.com/mbostock/d3</li>
-                            <li>http://bl.ocks.org/rkirsling/5001347</li>
-                            <li>http://marvl.infotech.monash.edu/webcola/</li>
+                            <li><a href="http://marvl.infotech.monash.edu/webcola/">http://marvl.infotech.monash.edu/webcola/</a></li>
+                            <li><a href="http://bramp.github.io/js-sequence-diagrams">http://bramp.github.io/js-sequence-diagrams</a></li>
+                            <li><a href="http://meteor.com">http://meteor.com</a></li>
+                            <li><a href="https://github.com/mbostock/d3">https://github.com/mbostock/d3</a></li>
                         </ul>
                     </div>
                 </div>
