--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -22,23 +22,12 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <label for="codeID" class="control-label">Lines</label>
+                                    <label for="codeID" class="control-label">Lines
+                                    <a id="lines-help">
+                                        <i class="fa fa-question-circle"></i>
+                                    </a>
+                                    </label>
                                     <textarea id="codeID" class="form-control" rows="3">{{code}}</textarea>
-                                <!--</div>-->
-                            <!--</div>-->
-                            <!--<div class="form-group">-->
-                                <!--<div class="col-sm-12">-->
-                                    <label for="legendID" class="control-label">Legend</label>
-                                    <table id="legendID" class="table table-striped table-condensed table-bordered">
-                                        <tbody>
-                                        {{#each legend}}
-                                        <tr>
-                                            <th scope="row">{{name}}</th>
-                                            <td>{{ref}}</td>
-                                        </tr>
-                                        {{/each}}
-                                        </tbody>
-                                    </table>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -73,7 +62,18 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col col-sm-12">
+                                <div class="col-sm-12">
+                                    <label for="legendID" class="control-label">Nodes</label>
+                                    <table id="legendID" class="table table-striped table-condensed table-bordered">
+                                        <tbody>
+                                        {{#each legend}}
+                                            <tr>
+                                                <th scope="row">{{name}}</th>
+                                                <td>{{ref}}</td>
+                                            </tr>
+                                        {{/each}}
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </form>
