--- a/client/views/context/ctxDgm/ctxDgm.less
+++ b/client/views/context/ctxDgm/ctxDgm.less
@@ -31,3 +31,34 @@
     cursor: move;
   }
 }
+
+#dotpowergraph {
+
+  .node {
+    cursor: move;
+    fill: #550000;
+  }
+  .group {
+    stroke: #AA6c39;
+    fill: #AA6c39;
+    stroke-width: 3;
+    fill-opacity: 0.4;
+  }
+  .link {
+    /*stroke: #661141;*/
+    stroke-width: 3px;
+    stroke-opacity: 1;
+    marker-end: url(#end-arrow);
+  }
+  .label {
+    fill: white;
+    font-family: Verdana;
+    font-size: 15px;
+    text-anchor: middle;
+    cursor: move;
+  }
+  .swatchlabel {
+    font-family: Verdana;
+    font-size: 15px;
+  }
+}
