--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -91,28 +91,28 @@
                     </a>
                     &middot; <a href="#" class="scroll-to" data-where="powergraph-help" title="Scroll to Summary Diagram">Summary Diagram</a>
                     &middot; <a href="#" class="scroll-to" data-where="dotpowergraph-help" title="Scroll to Grid Diagram">Grid Diagram</a>
-                    <small>|</small> <a href="#" class="scroll-to small" data-where="powergraph-help" title="Scroll to next diagram">next <i class="fa fa-arrow-circle-down"></i></a>
+                    <!--<small>|</small> <a href="#" class="scroll-to small" data-where="powergraph-help" title="Scroll to next diagram">next <i class="fa fa-arrow-circle-down"></i></a>-->
                 </h4>
                 <div id="context"></div>
-                <h4>Summary Diagram
+                <h4><a href="#" class="scroll-top" title="Scroll to Context Diagram">Context Diagram</a>
+                    &middot; Summary Diagram
                     <a id="powergraph-help">
                         <i class="fa fa-question-circle"></i>
                     </a>
-                    &middot; <a href="#" class="scroll-top" title="Scroll to Context Diagram">Context Diagram</a>
                     &middot; <a href="#" class="scroll-to" data-where="dotpowergraph-help" title="Scroll to Grid Diagram">Grid Diagram</a>
-                    &middot; <a href="#" class="scroll-top small" title="Scroll to previous diagram">prev <i class="fa fa-arrow-circle-up"></i></a>
-                    <small>|</small> <a href="#" class="scroll-to small" data-where="dotpowergraph-help" title="Scroll to next diagram">next <i class="fa fa-arrow-circle-down"></i></a>
-                    <small>|</small> <a href="#" class="scroll-top small" title="Scroll to top of page">top</a>
+                    <!--&middot; <a href="#" class="scroll-top small" title="Scroll to previous diagram">prev <i class="fa fa-arrow-circle-up"></i></a>-->
+                    <!--<small>|</small> <a href="#" class="scroll-to small" data-where="dotpowergraph-help" title="Scroll to next diagram">next <i class="fa fa-arrow-circle-down"></i></a>-->
+                    <!--<small>|</small> <a href="#" class="scroll-top small" title="Scroll to top of page">top</a>-->
                 </h4>
                 <div id="powergraph"></div>
-                <h4>Grid Diagram
+                <h4><a href="#" class="scroll-top" title="Scroll to Context Diagram">Context Diagram</a>
+                    &middot; <a href="#" class="scroll-to" data-where="powergraph-help" title="Scroll to Summary Diagram">Summary Diagram</a>
+                    &middot; Grid Diagram
                     <a id="dotpowergraph-help">
                         <i class="fa fa-question-circle"></i>
                     </a>
-                    &middot; <a href="#" class="scroll-top" title="Scroll to Context Diagram">Context Diagram</a>
-                    &middot; <a href="#" class="scroll-to" data-where="powergraph-help" title="Scroll to Summary Diagram">Summary Diagram</a>
-                    &middot; <a href="#" class="scroll-to small" data-where="powergraph-help" title="Scroll to previous diagram">prev <i class="fa fa-arrow-circle-up"></i></a>
-                    <small>|</small> <a href="#" class="scroll-top small" title="Scroll to top of page">top</a>
+                    <!--&middot; <a href="#" class="scroll-to small" data-where="powergraph-help" title="Scroll to previous diagram">prev <i class="fa fa-arrow-circle-up"></i></a>-->
+                    <!--<small>|</small> <a href="#" class="scroll-top small" title="Scroll to top of page">top</a>-->
                 </h4>
                 <div id="dotpowergraph"></div>
 
