--- a/client/views/context/ctxDgmView/ctxDgmView.html
+++ b/client/views/context/ctxDgmView/ctxDgmView.html
@@ -52,22 +52,10 @@
 
             </div>
 
-            <div id="context-div" class="col col-md-6">
-                <h4 style="margin-top: -5px">Context Diagram
-                    <a id="context-help">
-                        <i class="fa fa-question-circle"></i>
-                    </a>
-                </h4>
-                <div id="context"></div>
+            <div id="context-div" class="col col-md-12">
+                {{>_ctxDgm}}
             </div>
-            <div id="powergraph-div" class="col col-md-6">
-                <h4 style="margin-top: -5px">Summary Diagram
-                    <a id="powergraph-help">
-                        <i class="fa fa-question-circle"></i>
-                    </a>
-                </h4>
-                <div id="powergraph"></div>
-            </div>
+
         </div>
     </div>
 </template>
