--- a/client/views/context/ctxDgmView/ctxDgmView.html
+++ b/client/views/context/ctxDgmView/ctxDgmView.html
@@ -53,7 +53,7 @@
             </div>
 
             <div id="context-div" class="col col-md-12">
-                {{>_ctxDgm}}
+                {{>_ctxDgm nodes=nodes}}
             </div>
 
         </div>
