--- a/client/views/context/layout/_ctxDgm.html
+++ b/client/views/context/layout/_ctxDgm.html
@@ -22,7 +22,22 @@
             <i class="fa fa-question-circle"></i>
         </a>
     </h4>
-    <div id="dotpowergraph"></div>
+    <div class="col col-md-10">
+        <div id="dotpowergraph"></div>
+    </div>
+    <div class="col col-md-2">
+        <h4>Legend</h4>
+        <table class="table table-striped table-condensed table-bordered">
+            <tbody>
+            {{#each nodes}}
+                <tr>
+                    <th scope="row">{{name}}</th>
+                    <td>{{ref}}</td>
+                </tr>
+            {{/each}}
+            </tbody>
+        </table>
+    </div>
 
 </template>
 
