--- a/client/views/static/aboutPage.html
+++ b/client/views/static/aboutPage.html
@@ -20,7 +20,7 @@
 
                         <a href="https://trello.com/b/NePeqGwC/idiagram">Trello project tracking enhancements</a>
 
-                        <h3>Credit to</h3>
+                        <h3>Credit</h3>
                         <ul>
                             <li><a href="http://marvl.infotech.monash.edu/webcola/">http://marvl.infotech.monash.edu/webcola/</a></li>
                             <li><a href="http://bramp.github.io/js-sequence-diagrams">http://bramp.github.io/js-sequence-diagrams</a></li>
