--- a/client/views/context/ctxDgmView/ctxDgmView.html
+++ b/client/views/context/ctxDgmView/ctxDgmView.html
@@ -1,5 +1,5 @@
 <template name="ctxDgmView">
-    <!--{{> topPanel}}-->
+    {{> topPanel}}
 
     <div id="ctxDgmPage" class="page">
         <div class="content">
