--- a/client/views/history/list/historyList.html
+++ b/client/views/history/list/historyList.html
@@ -1,13 +1,24 @@
 <template name="historyList">
     <div id="historyList">
-
-            <div>
-
-                <div class="list-group">
-                    {{> pages}}
-                </div>
-                {{> pagesNav}}
-
-            </div>
+        <div class="text-center">
+            {{#if isFilterable}}
+                {{#if isFiltered}}Filtered{{else}}All{{/if}} History
+                <a id="historyFilterID" class="pull-right active" style="margin-top: -5px" href="" title="toggle filter by diagram">
+                    <!--<i class="fa fa-filter {{#if isFiltered}}fa-inverse{{/if}} fa-2x"></i>-->
+                    <i class="fa fa-filter fa-2x"></i>
+                </a>
+            {{else}}
+                All History
+            {{/if}}
         </div>
+
+        <div>
+
+            <div class="list-group">
+                {{> pages}}
+            </div>
+            {{> pagesNav}}
+
+        </div>
+    </div>
 </template>
