--- a/client/views/context/layout/_ctxDgm.html
+++ b/client/views/context/layout/_ctxDgm.html
@@ -2,8 +2,7 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#contextTab" aria-controls="contextTab" role="tab" data-toggle="tab">Context Diagram</a></li>
-        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Summary Diagram</a></li>
-        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Grid Diagram</a></li>
+        <li role="presentation"><a href="#dotpowergraphTab" aria-controls="dotpowergraphTab" role="tab" data-toggle="tab">Summary Diagram</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -14,13 +13,7 @@
                 <i class="fa fa-question-circle"></i>
             </a></h4>
         </div>
-        <div role="tabpanel" class="tab-pane" id="profile">
-            <div id="powergraph"></div>
-            <h4><a id="powergraph-help">
-                <i class="fa fa-question-circle"></i>
-            </a></h4>
-        </div>
-        <div role="tabpanel" class="tab-pane" id="messages">
+        <div role="tabpanel" class="tab-pane" id="dotpowergraphTab">
             <div class="col col-md-10">
                 <div id="dotpowergraph"></div>
             </div>
