--- a/client/views/context/layout/_ctxDgm.html
+++ b/client/views/context/layout/_ctxDgm.html
@@ -9,9 +9,9 @@
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="contextTab">
             <div id="context"></div>
-            <h4><a id="context-help">
-                <i class="fa fa-question-circle"></i>
-            </a></h4>
+            <a id="context-help">
+                <i class="fa fa-question-circle fa-2x"></i>
+            </a>
         </div>
         <div role="tabpanel" class="tab-pane" id="dotpowergraphTab">
             <div class="col col-md-10">
