header and footer

--- a/client/views/history/detail/historyPage.html
+++ b/client/views/history/detail/historyPage.html
@@ -15,7 +15,9 @@
                     </span>
 
                     <hr>
+                    <div id="htmlHeader"></div>
                     <div id="diagram"></div>
+                    <div id="htmlFooter"></div>
                 </div>
             </div>
 
